* HTML substitutions.
* Editable URLs and substitutions.
* No methods added to prototypes of standard global objects (to avoid possible
  conflicts).
* Revised binding for input textbox.
* String changes:
  - substitutiongroupeditor.dtd: new: editUrlButton.label,
    editUrlButton.accesskey, okEditUrlButton.label, okEditUrlButton.accesskey,
    cancelEditUrlButton.label, cancelEditUrlButton.accesskey,
    editSubstitutionButton.label, editSubstitutionButton.accesskey,
    okEditSubstitutionButton.label, okEditSubstitutionButton.accesskey,
    cancelEditSubstitutionButton.label, cancelEditSubstitutionButton.accesskey;
    other accesskeys changed.

v0.8.0 (20-9-2008)
* Whole words option integrated in the XBL input textbox.
* Per-site substitution: now you can define a list of substitution groups, where
  every group has an URL list and a substitution list; the substitutions are
  applied only if the URL of the current page matches one of the URLs in the
  list or if the list is empty.
* Substitution list stored in XML.
* Updated help.
* Some skin changes.
* Removed special skin for macfoxIIgraphite because it's not compatible with
  Firefox 3.
* New prototypes for FxRSubstitution and FxRSubstitutionGroup.
* String changes:
  - bindings.dtd: new: wholeWords.
  - foxreplace.dtd: removed: replaceBarWholeWords.label,
    replaceBarWholeWords.accesskey.
  - help.dtd: several new, modified and removed strings.
  - options.dtd: lots of changes.
  - substitutiongroupeditor.dtd: all new.
  - foxreplace.properties: new: text, wholewords, regexp, noSubstitutionsTitle,
    noSubstitutionsDescription, xmlErrorTitle, xmlErrorText, xmlGroupErrorText.

v0.7.3 (18-8-2008)
* Less crowded replace bar (new input textbox with XBL).
* New XBL input textbox also in options dialog.
* Better replace bar theme for macfoxIIgraphite.
* New strings:
  - bindings.dtd: all.
* Removed strings:
  - foxreplace.dtd: replaceBarInputRegExp.label,
    replaceBarInputRegExp.accesskey.