@@ -1,5 +1,7 @@
 * HTML substitutions.
 * Editable URLs and substitutions.
+* Edit, delete and move buttons in options dialog disabled when there is no item
+  selected.
 * No methods added to prototypes of standard global objects (to avoid possible
   conflicts).
 * Revised binding for input textbox.
